# atlas-rover-mk1

./: .atlas-brain.env.example  .gitignore  Atlas One.code-workspace  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
Atlas_Rover_Mk1_制造图纸包_V1.0/: 一致性复审报告_Atlas_Rover_Mk1_V1.0.md  接线说明_Atlas_Rover_Mk1_V1.0.md  程序设计_Atlas_Rover_Mk1_V1.0.md  组装模拟与效果确认_Atlas_Rover_Mk1_V1.0.md  装配指南_Atlas_Rover_Mk1_V1.0.md  规格核对_Atlas_Rover_Mk1_V1.0.md  详细组装与接线手册_Atlas_Rover_Mk1_V1.0.md  语音与双板UART控制方案_Atlas_Rover_Mk1_V1.0.md  说明.md  资料来源_Atlas_Rover_Mk1_V1.0.md  采买执行清单_Atlas_Rover_Mk1_V1.0.md  采购执行表_Atlas_Rover_Mk1_V1.0.xlsx  采购清单_Atlas_Rover_Mk1_V1.0.csv  采购清单_Atlas_Rover_Mk1_V1.0.md
docs/: Atlas_80分加固包_2026-06-23.md  Atlas_Brain改造记录_2026-06-23.md  Atlas_DualEye_common化拆分执行计划_2026-06-24.md  Atlas_DualEye_三线体验实机测试矩阵_2026-06-24.md  Atlas_DualEye_全功能实机测试报告_2026-06-23.md  Atlas_DualEye_实机Trace字段契约_2026-06-24.md  Atlas_DualEye_实机体验问题定位速查_2026-06-24.md  Atlas_DualEye_桌面应用页面实测清单_2026-06-24.md  Atlas_DualEye_连续语音与页面状态实机验收_2026-06-24.md  Atlas_P0-P5加固包_2026-06-23.md  Atlas_Rover_Mk1_可视化组装器方案.md  Atlas_TOC连续语音实机验收_P4.md  Atlas_pet_head拟3D转头对话表情方案_V0.3.md  Atlas_pet_head资源规范_V0.2.md  Atlas_平台与应用分层隔离改造计划_V0.1.md  Atlas_智能硬件平台化资产沉淀方案_V0.1.md  Atlas_服务端与固件端并行拆分工作包_2026-06-24.md  Atlas_端到端实测与xiaozhi追赶记录_2026-06-22.md  Atlas智能体架构设计_V0.11.md  Atlas桌面智能硬件平台化执行记录_V0.12.md  DualEye固件V0.1设计说明_Atlas_Rover_Mk1.md  MimiClaw集成方案_Atlas_Rover_Mk1.md  MiniClaw技能与Agent设计_Atlas_Rover_Mk1.md  Web控制端TOC产品评审与改版方案_2026-06-23.md  xiaozhi-esp32-server对标分析报告_Atlas_V0.11.md  xiaozhi-esp32固件对标分析报告_Atlas_V0.11.md  双目表情设计方案_Atlas_Rover_Mk1.md  开发路线图.md  (+17 more)
firmware/dualeye/main/: CMakeLists.txt  Kconfig.projbuild  atlas_admin_http.c  atlas_admin_http.h  atlas_audio.c  atlas_audio.h  atlas_audio_service.c  atlas_audio_service.h  atlas_brain_adapter.c  atlas_brain_adapter.h  atlas_brain_intent.c  atlas_brain_intent.h  atlas_brain_ws_client.c  atlas_brain_ws_client.h  atlas_config.c  atlas_config.h  atlas_display.c  atlas_display.h  atlas_expression.c  atlas_expression.h  atlas_font_zh_16.c  atlas_llm_client.c  atlas_llm_client.h  atlas_mimiclaw_adapter.c  atlas_mimiclaw_adapter.h  atlas_mimiclaw_intent.c  atlas_mimiclaw_intent.h  atlas_opus_stream.c  atlas_opus_stream.h  atlas_page.h  atlas_pairing.c  atlas_pairing.h  atlas_pet.c  atlas_pet.h  atlas_rover_uart.c  atlas_rover_uart.h  atlas_runtime.c  atlas_runtime.h  atlas_scene.c  atlas_scene.h  (+10 more)
firmware/dualeye/main/common/: atlas_common_assets.c  atlas_common_assets.h  atlas_common_audio_service.c  atlas_common_audio_service.h  atlas_common_brain_session.c  atlas_common_brain_session.h  atlas_common_config.c  atlas_common_config.h  atlas_common_device_status.c  atlas_common_device_status.h  atlas_common_opus_stream.c  atlas_common_opus_stream.h  atlas_common_tool_schema.c  atlas_common_tool_schema.h  atlas_common_ui_state.c  atlas_common_ui_state.h
simulator_mac/: CMakeLists.txt  README.md
simulator_mac/src/: main.c
(+65 files in other folders)
